Limit for timer event

--- a/distribution/index.html
+++ b/distribution/index.html
@@ -1948,6 +1948,9 @@ let core = {
 									let t = this.eventqueue[0].type;
 									let e = this.eventqueue[0].event;
 									this.eventqueue.splice(0, 1);
+									// this allows another timer event to be enqueued,
+									// while the timer event is executed
+									if (t == "timer") this.timerEventEnqueued = false;
 									if (this.eventhandler.hasOwnProperty(t))
 									{
 										let handler = this.eventhandler[t];
@@ -7187,7 +7190,10 @@ module.Interpreter = function(program)
 					}
 				}
 			}
-			if (this.background) this.enqueueEvent("timer", {"type": this.program.types[module.typeid_null], "value": {"b": null}});
+			if (this.background && !this.timerEventEnqueued)
+			{
+				this.timerEventEnqueued = this.enqueueEvent("timer", {"type": this.program.types[module.typeid_null], "value": {"b": null}});
+			}
 		}
 
 		let context = this;
@@ -7447,11 +7453,16 @@ module.Interpreter = function(program)
 	{
 		this.stop = true;
 	};
+	
+	// event limits
+	this.timerEventEnqueued = false;
 
 	// queue an event
+	// returns true when event got enqueued, false otherwise
 	this.enqueueEvent = function(type, event)
 	{
 		if (this.eventmode) this.eventqueue.push({"type": type, "event": event});
+		return this.eventmode;
 	};
 
 	// define an event handler - there can only be one :)
@@ -16406,6 +16417,9 @@ if (doc) doc.children.push({
 			<code class="code">setEventHandler</code> with
 			<code class="code">handler = null</code> removes the handler for
 			the given event type.
+			
+			When events take more than 20 milliseconds to complete,
+			the &quot;timer&quot; event only gets called once for this timespan.
 		</td></tr>
 		<tr><th>enterEventMode</th><td>
 			The <code class="code">function enterEventMode()</code> puts the
