changed default hotkey for better FF compatibility

--- a/distribution/index.html
+++ b/distribution/index.html
@@ -1340,8 +1340,12 @@ let core = {
 						else if (module.isDerivedFrom(arg.type, module.typeid_string))
 						{
 							let s = arg.value.b.trim();
+							let v = 1;
+							if (s.length == 0) this.error("/argument-mismatch/am-14");
+							if (s[0] == '-') { v = -1; s = s.substr(1); }
+							else if (s[0] == '+') { s = s.substr(1); }
 							if (s.length == 0 || "0123456789.".indexOf(s[0]) < 0) this.error("/argument-mismatch/am-14");
-							let v = Number(s);
+							v *= Number(s);
 							if (! Number.isFinite(v)) this.error("/argument-mismatch/am-13");
 							object.value.b = Math.floor(v) | 0;
 						}
@@ -9844,7 +9848,7 @@ let buttons = [
 						ctx.fill();
 					},
 			"tooltip": "run the current command, step into function calls",
-			"hotkey": "F11",
+			"hotkey": "shift-control-F11",
 		},
 		{
 			"click": cmd_step_over,
@@ -11720,7 +11724,7 @@ if (doc) doc.children.push({
 		<p>
 		TScript is an imperative and object oriented language. In many
 		aspects it has similarities to "scripting" languages like Python
-		and Javascript: code is executes as it is encountered, so there
+		and Javascript: code is executed as it is encountered, so there
 		is no explicit entry point, variables are untyped, they
 		reference values instead of containing them, and memory is fully
 		managed.
@@ -12359,7 +12363,7 @@ if (doc) doc.children.push({
 		"content": `
 			<p>
 			TScript source code consists of unicode characters from the
-			<a target="_blank" href="https://en.wikipedia.org/wiki/Plane_(Unicode)#Basic_Multilingual_Plane">Basic Multilingual Plane</a>.
+			<a target="_blank" href="https://en.wikipedia.org/wiki/Plane_(Unicode)#Basic_Multilingual_Plane">Basic Multilingual Plane</a> (BMP).
 			These characters have codes in the range U+0000 to U+FFFF.
 			In other words, each character (or "code point") can be
 			represented as an unsigned 16-bit integer.
@@ -12382,6 +12386,22 @@ if (doc) doc.children.push({
 			Inside comments and string literals, the full range U+0000
 			to U+FFFF is legal. Every character can be denoted in plain
 			ASCII by means of an escaping mechanism.
+			</p>
+			<p>
+			<b>Note:</b>
+			The TScript implementation is based directly on Javascript
+			(ECMAScript&nbsp;6). Javascript allows its implementations
+			to support the complete unicode range by composing
+			characters outside the BMP with the UTF16 encoding, but this
+			feature is not mandatory. In practice, Javascript engines do
+			support the mechanism, which amounts to representing the
+			unicode characters outside the BMP with two characters in
+			the range U+0000 to U+FFFF. This solution is error-prone.
+			For example, it is somewhat surprising if a string that
+			prints as a single character consists of two characters, as
+			revealed by the size method and when accessing the
+			characters, slicing the string, etc. It is therefore
+			recommended to restrict string contents to the BMP.
 			</p>
 		`,
 		"children": []},
