fixed issues #23 and #24

--- a/distribution/index.html
+++ b/distribution/index.html
@@ -394,9 +394,9 @@ let module = {
 			type: "beta",
 			major: 0,
 			minor: 5,
-			patch: 23,
-			day: 9,
-			month: 1,
+			patch: 24,
+			day: 2,
+			month: 2,
 			year: 2020,
 			full: function()
 					{
@@ -1147,6 +1147,7 @@ let errors = {
 		"ne-24": "use of identifier '$$' conflicts with previous declaration; double use of the same name",
 		"ne-25": "error in constructor call; the constructor of type '$$' is declared $$",
 		"ne-26": "variable $$ is used in its own initializer",
+		"ne-27": "error in super class declaration; class '$$' inherits itself",
 	},
 	"logic": {
 		"le-1": "too much recursion",
@@ -4149,7 +4150,7 @@ function parse_expression(state, parent, lhs)
 					{
 						let indent = state.indentation();
 						let topmost = state.indent[state.indent.length - 1];
-						if (topmost >= 0 && topmost != indent) state.error("/style/ste-2");
+						if (topmost >= 0 && topmost > indent) state.error("/style/ste-2");
 					}
 					module.get_token(state);
 					break;
@@ -5403,9 +5404,10 @@ function parse_class(state, parent)
 		cls.superclass = result.lookup;
 
 		if (cls.superclass.petype != "type") state.error("/name/ne-22", [result.name]);
+		if (cls == cls.superclass) state.error("/name/ne-27", [result.name]);
 		cls.objectsize = cls.superclass.objectsize;
 
-		if (cls.superclass.class_constructor.access == "private") state.error("/syntax/se-58");
+		if (cls.superclass.class_constructor && cls.superclass.class_constructor.access == "private") state.error("/syntax/se-58");
 
 		// parse the next token to check for '{'
 		token = module.get_token(state);
@@ -19111,6 +19113,22 @@ if (doc) doc.children.push({
 			An easy fix is to make the constructor public. However, this error
 			usually indicates that objects of the given type should not ever be
 			created directly from outside the class.
+			</p>
+		`,
+		"children": []},
+		{"id": "ne-26",
+		"content": `
+			<p>
+			It was attempted to use a variable during its own initialization.
+			That's not possible, since the variable does not yet have a value.
+			</p>
+		`,
+		"children": []},
+		{"id": "ne-27",
+		"content": `
+			<p>
+			It was attempted to use a class as its own super class.
+			That's not possible because inheritance chains must be cycle-free.
 			</p>
 		`,
 		"children": []},
