cheat sheet added

--- a/source/index.html
+++ b/source/index.html
@@ -24,6 +24,7 @@
 	<script src="def-language.js" ></script>
 	<script src="def-stdlib.js" ></script>
 	<script src="def-errors.js" ></script>
+	<script src="def-cheatsheet.js" ></script>
 	<script src="def-legal.js" ></script>
 	<link rel="stylesheet" href="codemirror.css">
 	<link rel="stylesheet" href="tgui.css">
