--- a/distribution/index.html
+++ b/distribution/index.html
@@ -394,8 +394,8 @@ let module = {
 			type: "beta",
 			major: 0,
 			minor: 5,
-			patch: 25,
-			day: 20,
+			patch: 26,
+			day: 22,
 			month: 2,
 			year: 2020,
 			full: function()
@@ -10945,9 +10945,11 @@ explorative learning style.
 <p>
 Being a reference documentation, this collection of documents is not
 designed for being read front to end, but rather as a resource for
-looking up information. However, the section
-<a href="#/concepts">core concepts</a> is a good starting point for
-programmers experienced with other programming languages.
+looking up information. For programmers experienced with other
+programming languages, the section
+<a href="#/concepts">core concepts</a> is a good starting point, and the
+<a href="#/cheatsheet">cheat sheet</a> provides the most
+important bits in compact form.
 </p>
 `
 };
@@ -11795,6 +11797,7 @@ if (doc) doc.children.push({
 	The following documents should be helpful for readers with some
 	programming experience to get an quick overview of tscript:
 	<ul>
+	<li><a href="#/cheatsheet">Cheat Sheet</a></li>
 	<li><a href="#/concepts/overview">The Language at a Glance</a></li>
 	<li><a href="#/concepts/design">Design Decisions</a></li>
 	<li><a href="#/concepts/arithmetics">Arithmetics</a></li>
@@ -12603,7 +12606,7 @@ if (doc) doc.children.push({
 			</p>
 			<ebnf>
 				operator = arithmetic_op | compare_op | assign-op ;
-				binary-op = "+" | "-" | "*" | "/" | "%" | "^" ;
+				binary-op = "+" | "-" | "*" | "/" | "//" | "%" | "^" ;
 				compare_op = "==" | "!=" | "<" | "<=" | ">" | ">=" ;
 				assign-op = "=" | "+=" | "-=" | "*=" | "/=" | "%=" | "^=" ;
 				grouping = "(" | ")" | "[" | "]" | "{" | "}" ;
@@ -12795,7 +12798,7 @@ if (doc) doc.children.push({
 			            | "a" | "b" | "c" | "d" | "e" | "f" ;
 
 			operator = arithmetic_op | compare_op | assign-op ;
-			binary-op = "+" | "-" | "*" | "/" | "%" | "^" ;
+			binary-op = "+" | "-" | "*" | "/" | "//" | "%" | "^" ;
 			compare_op = "==" | "!=" | "<" | "<=" | ">" | ">=" ;
 			assign-op = "=" | "+=" | "-=" | "*=" | "/=" | "%=" | "^=" ;
 			grouping = "(" | ")" | "[" | "]" | "{" | "}" ;
@@ -13856,8 +13859,8 @@ if (doc) doc.children.push({
 		`,
 		"children": [
 			{"id": "not",
-			"name": "Logical Negation",
-			"title": "Logical Negation",
+			"name": "Logical or Bitwise Negation",
+			"title": "Logical or Bitwise Negation",
 			"content": `
 				<p>
 				<code class="code">operator not</code> performs a logical or bitwise
@@ -19389,6 +19392,102 @@ if (doc) doc.children.push({
 "use strict"
 
 if (doc) doc.children.push({
+"id": "cheatsheet",
+"name": "Cheat Sheet",
+"title": "Cheat Sheet",
+"content": `
+	<div class="flex">
+	<table class="nicetable">
+	<tr><th><a href="#/language/expressions/literals">literals</a></th><th>example</th></tr>
+	<tr><td><a href="#/language/expressions/literals/integers">integer</a></td><td><code>42</code></td></tr>
+	<tr><td><a href="#/language/expressions/literals/reals">real</a></td><td><code>6.62607015e-34</code></td></tr>
+	<tr><td><a href="#/language/expressions/literals/strings">string</a></td><td><code>"This is a test.\\nNext line."</code></td></tr>
+	<tr><td>range</td><td><code>20:30</code></td></tr>
+	<tr><td><a href="#/language/expressions/literals/arrays">array</a></td><td><code>["foo", 42, false];</code></td></tr>
+	<tr><td><a href="#/language/expressions/literals/dictionaries">dictionary</a></td><td><code>{foo: 42, "bar-bar": false}</code></td></tr>
+	</table>
+	<table class="nicetable">
+	<tr><th><a href="#/language/statements">control structures</a></th><th>example / syntax</th></tr>
+	<tr><td><a href="#/language/statements/if-then-else">condition</a></td><td><code>if i == 0 then { ... } else { ... }</code></td></tr>
+	<tr><td><a href="#/language/statements/for-loops">for-loop</a></td><td><code>for var i in 0:n do { ... }</code></td></tr>
+	<tr><td><a href="#/language/statements/while-do-loops">while-do-loop</a></td><td><code>while not happy do { ... }</code></td></tr>
+	<tr><td><a href="#/language/statements/do-while-loops">do-while-loop</a></td><td><code>do { ... } while not happy;</code></td></tr>
+	<tr><td><a href="#/language/statements/try-catch">try-catch-block</a></td><td><code>try { ... } catch var ex do { ... }</code></td></tr>
+	</table>
+	<table class="nicetable">
+	<tr><th><a href="#/language/syntax/comments">comments</a></th><th>example</th></tr>
+	<tr><td>line comment</td><td><code># comment</code></td></tr>
+	<tr><td>range comment</td><td><code>#* comment *#</code></td></tr>
+	</table>
+	<table class="nicetable">
+	<tr><th><a href="#/language/declarations/variables">variables</a></th><th>example</th></tr>
+	<tr><td>declare variable(s)</td><td><code>var a, b;</code></td></tr>
+	<tr><td>declare and initialize</td><td><code>var c = 7;</code></td></tr>
+	</table>
+	<table class="nicetable">
+	<tr><th>functions</th><th>example / syntax</th></tr>
+	<tr><td><a href="#/language/declarations/functions">function</a> or <a href="#/language/declarations/classes">method</a></td><td><code>function myfunc (...) { ... }</code></td></tr>
+	<tr><td><a href="#/language/expressions/literals/anonymous-functions">lambda function</a></td><td><code>function (...) { ... }</code></td></tr>
+	<tr><td>enclosing <a href="#/language/expressions/literals/anonymous-functions">lambda function</a></td><td><code>function [...] (...) { ... }</code></td></tr>
+	</table>
+	<table class="nicetable">
+	<tr><th>namespaces</th><th>example / syntax</th></tr>
+	<tr><td>define <a href="#/language/declarations/namespaces">namespace</a></td><td><code>namespace myspace { ... }</code></td></tr>
+	<tr><td><a href="#/language/directives/use">import</a> specific name(s)</td><td><code>from myspace use foo, bar;</code></td></tr>
+	<tr><td><a href="#/language/directives/use">import</a> whole namespace</td><td><code>use namespace myspace;</code></td></tr>
+	</table>
+	<table class="nicetable">
+	<tr><th><a href="#/library">standard library</a></th><th>topic</th></tr>
+	<tr><td><a href="#/library/core">code functions</a></td><td>messages, time, errors, files, events</td></tr>
+	<tr><td><a href="#/library/math">math functions</a></td><td>e.g., sine and square root</td></tr>
+	<tr><td><a href="#/library/turtle">turtle graphics</a></td><td>simple graphics</td></tr>
+	<tr><td><a href="#/library/canvas">canvas graphics</a></td><td>powerful 2D graphics</td></tr>
+	</table>
+	<table class="nicetable">
+	<tr><th><a href="#/language/declarations/classes">classes</a></th><th>example / syntax</th></tr>
+	<tr><td>define class</td><td><code>class MyStuff { ... }</code></td></tr>
+	<tr><td>define subclass</td><td><code>class MyCoolStuff : MyStuff { ... }</code></td></tr>
+	<tr><td>constructor</td><td><code>constructor (...) { ... }</code></td></tr>
+	<tr><td>constructor calling super class</td><td><code>constructor (...) : super(...) { ... }</code></td></tr>
+	<tr><td>visibility sections</td><td><code>public:</code><br/><code>protected:</code><br/><code>private:</code></td></tr>
+	<tr><td>class-related keywords</td><td><code>static</code>, <code>this</code>, <code>super</code></td></tr>
+	</table>
+	<table class="nicetable">
+	<tr><th><a href="#/language/types">data type</a></th><th>values</th></tr>
+	<tr><td><a href="#/language/types/null"><code>Null</code></a></td><td><code>null</code></td></tr>
+	<tr><td><a href="#/language/types/boolean"><code>Boolean</code></a></td><td><code>true</code>, <code>false</code></td></tr>
+	<tr><td><a href="#/language/types/integer"><code>Integer</code></a></td><td>signed 32-bit integers</td></tr>
+	<tr><td><a href="#/language/types/real"><code>Real</code></a></td><td>floating point numbers</td></tr>
+	<tr><td><a href="#/language/types/string"><code>String</code></a></td><td>text</td></tr>
+	<tr><td><a href="#/language/types/array"><code>Array</code></a></td><td>ordered container with integer keys</td></tr>
+	<tr><td><a href="#/language/types/dictionary"><code>Dictionary</code></a></td><td>associative container with string keys</td></tr>
+	<tr><td><a href="#/language/types/function"><code>Function</code></a></td><td>function, lambda function, method</td></tr>
+	<tr><td><a href="#/language/types/range"><code>Range</code></a></td><td>range of integers, <code>from:to</code></td></tr>
+	<tr><td><a href="#/language/types/type"><code>Type</code></a></td><td>description of a type</td></tr>
+	</table>
+	<table class="nicetable">
+	<tr><th><a href="#/language/expressions/precedence">operator</a></th><th>meaning</th></tr>
+	<tr><td><a href="#/language/expressions/binary-operators/addition"><code>+</code></a></td><td>addition</td></tr>
+	<tr><td><a href="#/language/expressions/binary-operators/subtraction"><code>-</code></a></td><td>negation, subtraction</td></tr>
+	<tr><td><a href="#/language/expressions/binary-operators/multiplication"><code>*</code></a></td><td>multiplication</td></tr>
+	<tr><td><a href="#/language/expressions/binary-operators/real-division"><code>/</code></a></td><td>real division</td></tr>
+	<tr><td><a href="#/language/expressions/binary-operators/integer-division"><code>//</code></a></td><td>integer division</td></tr>
+	<tr><td><a href="#/language/expressions/binary-operators/modulo"><code>%</code></a></td><td>modulo</td></tr>
+	<tr><td><a href="#/language/expressions/binary-operators/power"><code>^</code></a></td><td>power</td></tr>
+	<tr><td><a href="#/language/expressions/binary-operators/equality"><code>==</code>, <code>!=</code></a></td><td>equality</td></tr>
+	<tr><td><a href="#/language/expressions/binary-operators/order"><code>&lt;</code>, <code>&lt;=</code>, <code>&gt;</code>, <code>&gt;=</code></a></td><td>order comparison</td></tr>
+	<tr><td><a href="#/language/expressions/unary-operators/not"><code>not</code></a></td><td>logical or bitwise not</td></tr>
+	<tr><td><a href="#/language/expressions/binary-operators/and"><code>and</code></a></td><td>logical or bitwise and</td></tr>
+	<tr><td><a href="#/language/expressions/binary-operators/or"><code>or</code></a></td><td>logical or bitwise or</td></tr>
+	<tr><td><a href="#/language/expressions/binary-operators/xor"><code>xor</code></a></td><td>logical or bitwise exclusive or</td></tr>
+	</table>
+	</div>
+`,
+"children": [],
+});
+"use strict"
+
+if (doc) doc.children.push({
 "id": "legal",
 "name": "Legal Information",
 "title": "Legal Information",
@@ -19440,6 +19539,7 @@ if (doc) doc.children.push({
 			<a target=\"_blank\" href=\"https://github.com/taye/interact.js/blob/master/LICENSE\">MIT license</a>.
 		</li>
 	</ul>
+	Thanks to <a href="https://github.com/manuel-fischer">Manuel Fischer</a> for contributions.
 	</p>
 `,
 "children": [],
@@ -20247,7 +20347,7 @@ button {
 {
 	margin: 10px 10px 10px 10px;
 	padding: 0 10px 0 10px;
-	width: 28vw;
+	width: 18vw;
 	height: 30px;
 	vertical-align: middle;
 	background: #eee;
@@ -20267,18 +20367,24 @@ input:focus
 
 #sidebar
 {
+	box-sizing: border-box;
 	position: fixed;
 	left: 0vw;
 	top: 0vh;
-	width: 30vw;
+	width: 20vw;
 	height: 100vh;
+	background: #ddd;
 }
 
 #version
 {
+	left: 0;
+	top: 0;
+	position: absolute;
+	box-sizing: border-box;
 	width: 100%;
-	height: 25px;
-	line-height: 25px;
+	height: 45px;
+	line-height: 150%;
 	color: #000;
 	background: #ddd;
 	padding: 2px;
@@ -20289,6 +20395,10 @@ input:focus
 
 #search
 {
+	left: 0;
+	top: 45px;
+	position: absolute;
+	box-sizing: border-box;
 	width: 100%;
 	height: 50px;
 	color: #fff;
@@ -20297,19 +20407,24 @@ input:focus
 
 #tree
 {
+	left: 0;
+	top: 95px;
+	position: absolute;
+	box-sizing: border-box;
 	width: 100%;
-	height: calc(100vh - 75px);
+	height: calc(100vh - 100px);
 	color: #000;
 	background: #ddd;
 }
 
 #content
 {
+	box-sizing: border-box;
 	display: block;
 	position: fixed;
-	left: 30vw;
+	left: 20vw;
 	top: 0vw;
-	width: 70vw;
+	width: 80vw;
 	height: 100vh;
 	padding: 3vh 5vw 3vh 5vw;
 	color: #000;
@@ -20322,6 +20437,7 @@ input:focus
 
 #content .pad
 {
+	box-sizing: border-box;
 	margin-bottom: 10vh;
 }
 
@@ -20404,6 +20520,7 @@ hr {
 	margin: 5px auto 5px auto;
 	border-collapse: collapse;
 	display: table;
+	margin: 10px;
 }
 
 .nicetable th
@@ -20421,6 +20538,24 @@ hr {
 	background: #aaf;
 	padding: 1ex;
 	text-align: center;
+}
+
+.nicetable th a
+{
+	color: #000;
+}
+
+.nicetable td a
+{
+	color: #000;
+}
+
+.flex
+{
+	display: flex;
+	flex-wrap: wrap;
+	flex-flow: space-evenly;
+	align-items: stretch;
 }
 
 .methods
