--- a/distribution/index.html
+++ b/distribution/index.html
@@ -394,8 +394,8 @@ let module = {
 			type: "beta",
 			major: 0,
 			minor: 5,
-			patch: 26,
-			day: 22,
+			patch: 27,
+			day: 26,
 			month: 2,
 			year: 2020,
 			full: function()
@@ -1313,6 +1313,7 @@ let core = {
 			function prompt(text) { }
 			function wait(milliseconds) { }
 			function time() { }
+			function localtime() { }
 			function setEventHandler(event, handler) { }
 			function enterEventMode() { }
 			function quitEventMode(result = null) { }
@@ -1837,6 +1838,10 @@ let core = {
 			},
 			"time": function() {
 				return {"type": this.program.types[module.typeid_real], "value": {"b": (new Date()).getTime()}};
+			},
+			"localtime": function() {
+				let d = new Date();
+				return {"type": this.program.types[module.typeid_real], "value": {"b": d.getTime() - 60000.0 * d.getTimezoneOffset()}};
 			},
 			"exists": function(key) {
 				if (! module.isDerivedFrom(key.type, module.typeid_string)) this.error("/argument-mismatch/am-1", ["key", "exists", "string", module.displayname(key.type)]);
@@ -16461,6 +16466,12 @@ if (doc) doc.children.push({
 			of milliseconds since midnight 01.01.1970
 			<a target="_blank" href="https://en.wikipedia.org/wiki/Coordinated_Universal_Time">UTC</a>
 			as a real.
+		</td></tr>
+		<tr><th>localtime</th><td>
+			The <code class="code">function localtime()</code> returns the number
+			of milliseconds since midnight 01.01.1970
+			as a real. The value refers to local time, i.e., taking the
+			local time zone and daylight saving time into account.
 		</td></tr>
 		<tr><th>exists</th><td>
 			The <code class="code">function exists(key)</code> returns
