hotkeys restricted to the editor

--- a/distribution/index.html
+++ b/distribution/index.html
@@ -7583,6 +7583,7 @@ let module = {};
 
 // global mapping of hotkeys to handlers
 let hotkeys = {};
+let hotkeyElement = null;
 
 // normalize the hotkey to lowercase
 module.normalizeHotkey = function(hotkey)
@@ -7618,6 +7619,10 @@ module.releaseHotkey = function(hotkey)
 // remove all hotkeys
 module.releaseAllHotkeys = function()
 { hotkeys = {}; }
+
+// enable hotkeys only if the given element is visible
+module.setHotkeyElement = function(element)
+{ hotkeyElement = element; }
 
 module.setTooltip = function(element, tooltip = "", direction="left")
 {
@@ -8646,6 +8651,14 @@ module.stopModal = function()
 	else modal[modal.length - 1].style.zIndex = 100;
 }
 
+// check whether an element is currently visible to the user
+// https://stackoverflow.com/a/7557433
+function isElementInViewport(element)
+{
+	var rect = element.getBoundingClientRect();
+	return (rect.width > 0 && rect.height > 0 && rect.top >= 0 && rect.left >= 0 && rect.bottom <= (window.innerHeight || document.documentElement.clientHeight) && rect.right <= (window.innerWidth || document.documentElement.clientWidth));
+}
+
 // register a global key listener for hotkey events
 document.addEventListener("keydown", function(event)
 {
@@ -8661,6 +8674,8 @@ document.addEventListener("keydown", function(event)
 	}
 	else
 	{
+		if (hotkeyElement && ! isElementInViewport(hotkeyElement)) return true;
+
 		// compose the key code string
 		let key = event.key;
 		if (event.altKey) key = "alt-" + key;
@@ -19151,6 +19166,7 @@ module.create = function(container, options)
 
 	// create HTML elements of the GUI
 	module.main = tgui.createElement({"type": "div", "parent": container, "classname": "ide ide-main"});
+	tgui.setHotkeyElement(module.main);
 
 	module.toolbar = tgui.createElement({"type": "div", "parent": module.main, "classname": "ide ide-toolbar"});
 
