extended the documentation by incorporating example programs allowed multiple instances of the search engine

--- a/source/index.html
+++ b/source/index.html
@@ -22,6 +22,7 @@
 	<script src="def-ide.js" ></script>
 	<script src="def-language.js" ></script>
 	<script src="def-stdlib.js" ></script>
+	<script src="def-examples.js" ></script>
 	<script src="def-errors.js" ></script>
 	<script src="def-cheatsheet.js" ></script>
 	<script src="def-legal.js" ></script>
