fixed long open export bug

--- a/distribution/index.html
+++ b/distribution/index.html
@@ -394,9 +394,9 @@ let module = {
 			type: "beta",
 			major: 0,
 			minor: 5,
-			patch: 32,
-			day: 14,
-			month: 8,
+			patch: 33,
+			day: 15,
+			month: 9,
 			year: 2020,
 			full: function()
 					{
@@ -18775,7 +18775,7 @@ let cmd_export = function()
 
 	tgui.startModal(dlg);
 
-	let source = ide.sourcecode.getValue().replace(/\n/g, "\\n").replace(/'/g, "\\'");
+	let source = ide.sourcecode.getValue().replace(/\\n/g, "\\\\n").replace(/\n/g, "\\n").replace(/'/g, "\\'");
 
 	{
 		var xhr = new XMLHttpRequest();
@@ -18799,7 +18799,7 @@ let cmd_export = function()
 				let s2 = page.substr(title2, pos - title2);
 				let s3 = page.substr(pos);
 
-				let s_init = "ide.sourcecode.setValue('" + source + "');\nide.prepare_run();\nide.interpreter.run();\n";
+				let s_init = "ide.sourcecode.setValue('" + source + "');\nide.prepare_run();\nif (ide.interpreter) ide.interpreter.run(); else { cv.innerHTML = ''; cv.appendChild(ide.messagecontainer); };\n";
 				let turtle = 'window.addEventListener("load", function() {\ntgui.releaseAllHotkeys();\ndocument.body.innerHTML = "";\nide.turtle.parentNode.removeChild(ide.turtle);\ndocument.body.appendChild(ide.turtle);\nide.turtle.style.width="100vh";\nide.turtle.style.height="100vh";\n' + s_init + '}, false);\n';
 				let canvas = 'window.addEventListener("load", function() {\ntgui.releaseAllHotkeys();\ndocument.body.innerHTML = "";\nlet cv = ide.canvas.parentNode;\ncv.parentNode.removeChild(cv);\ndocument.body.appendChild(cv);\ncv.style.width="100vw";\ncv.style.height="100vh";\ncv.style.top="0px";\nlet init = function() {\nif (cv.offsetWidth == 0 || cv.offsetHeight == 0) { window.setTimeout(init, 1); return; }\nide.canvas.width = cv.offsetWidth;\nide.canvas.height = cv.offsetHeight;\n' + s_init + 'cv.focus();\n};\nwindow.setTimeout(init, 1);\n}, false);\n';
 
