fixed: saving IDE from browser didn't work
when saving the file from within the browser as
suggested in the README file, the IDE container
was already set up and the saved file didn't work
correctly – added a code line that ensures the
container is empty before attempting to set it up

--- a/distribution/index.html
+++ b/distribution/index.html
@@ -20302,6 +20302,7 @@ if (String(document.title).startsWith("TScript IDE")) { event.preventDefault(); 
 window.addEventListener("load", function(event)
 {
 	let container = document.getElementById("ide-container");
+	container.innerHTML = "";
 	if (window.location.search == "?doc") doc.create(container);
 	else ide.create(container);
 }, false);
