--- a/source/index.html
+++ b/source/index.html
@@ -31,6 +31,7 @@
 		window.addEventListener("load", function(event)
 		{
 			let container = document.getElementById("ide-container");
+			container.innerHTML = "";
 			if (window.location.search == "?doc") doc.create(container);
 			else ide.create(container);
 		}, false);
