--- a/distribution/index.html
+++ b/distribution/index.html
@@ -19285,7 +19285,7 @@ function configDlg()
 	let titlebar = tgui.createElement({
 			"parent": dlg,
 			"type": "div",
-			"style": {"position": "absolute", "width": "50vw", "left": "0", "height": "22px", "top": "0", "background": "#008", "color": "#fff", "padding": "2px 10px"},
+			"style": {"position": "absolute", "width": "50vw", "left": "0", "height": "25px", "top": "0", "background": "#008", "color": "#fff", "padding": "2px 10px"},
 			"text": "configuration",
 		});
 	let content = tgui.createElement({
@@ -19375,6 +19375,7 @@ function configDlg()
 			"type": "button",
 			"style": {"position": "absolute", "right": "10px", "bottom": "10px", "width": "100px", "height": "25px"},
 			"text": "Close",
+			"classname": "tgui-dialog-button"
 		});
 	close.addEventListener("click", function(event)
 			{
@@ -19418,20 +19419,60 @@ function fileDlg(title, filename, allowNewFilename, onOkay)
 	let titlebar = tgui.createElement({
 			"parent": dlg,
 			"type": "div",
-			"style": {"position": "absolute", "width": "50vw", "left": "0", "height": "20px", "top": "0", "background": "#008", "color": "#fff", "padding": "2px 10px"},
+			"style": {"position": "absolute", "width": "100%", "left": "0", "height": "25px", "top": "0", "background": "#008", "color": "#fff", "padding": "2px 10px"},
 			"text": title,
 		});
+	let toolbar = tgui.createElement({
+			"parent": dlg,
+			"type": "div",
+			"style": {"position": "absolute", "width": "100%", "left": "0", "height": "25px", "top": "30px"},
+		});
+		
+	let deleteBtn = tgui.createElement({
+			"parent": toolbar,
+			"type": "button",
+			"style": {"width": "100px", "height": "100%", "margin-left": "10px"},
+			"text": "Delete file",
+			"click": () => deleteFile(name.value),
+			"classname": "tgui-dialog-button"
+		});
+
+	let exportBtn = tgui.createElement({
+			"parent": toolbar,
+			"type": "button",
+			"style": {"width": "100px", "height": "100%", "margin-left": "10px"},
+			"text": "Export",
+			"click": () => exportFile(name.value),
+			"classname": "tgui-dialog-button"
+		});
+	
+	let importBtn = tgui.createElement({
+			"parent": toolbar,
+			"type": "button",
+			"style": {"width": "100px", "height": "100%", "margin-left": "10px"},
+			"text": "Import",
+			"click": () => importFile(),
+			"classname": "tgui-dialog-button"
+		});
+	let statusBar = tgui.createElement({
+			"parent": toolbar,
+			"type": "label",
+			"style": {"width": "100px", "height": "100%", "margin-left": "10px"},
+			"text": (files.length > 0 ? files.length : "No") + " document"+(files.length == 1?"":"s"),
+			"classname": "tgui-status-box"
+		});
+	
 	let list = tgui.createElement({
 			"parent": dlg,
 			"type": files.length > 0 ? "select" : "text",
 			"properties": {"size": Math.max(2, files.length)},
-			"style": {"position": "absolute", "width": "46vw", "left": "2vw", "height": "calc(70vh - 80px)", "top": "30px", "background": "#fff", "overflow": "scroll"},
-			"text": files.length > 0 ? "" : "No documents saved.",
+			"style": {"position": "absolute", "width": "calc(100% - 20px)", "left": "10px", "height": "calc(100% - 25px - 50px - 25px)", "top": "60px", "background": "#fff", "overflow": "scroll"},
+			//"text": files.length > 0 ? "" : "No documents saved.",
 		});
 	let buttons = tgui.createElement({
 			"parent": dlg,
 			"type": "div",
-			"style": {"position": "absolute", "width": "46vw", "left": "2vw", "height": "25px", "bottom": "10px"},
+			"style": {"position": "absolute", "width": "100%", "left": "0", "height": "25px", "bottom": "10px", "display": "flex", "justify-content": "flex-end"},
 		});
 	let name = {value: filename};
 	if (allowNewFilename)
@@ -19439,46 +19480,25 @@ function fileDlg(title, filename, allowNewFilename, onOkay)
 		name = tgui.createElement({
 				"parent": dlg,
 				"type": "input",
-				"style": {"position": "absolute", "width": "46vw", "left": "2vw", "height": "25px", "bottom": "40px"},
+				"style": {"position": "absolute", "width": "calc(100% - 20px)", "left": "10px", "height": "25px", "bottom": "40px"},
 				"text": filename,
 				"properties": {type:"text", placeholder:"Filename"}
 			});
-		list.style.height = "calc(70vh - 110px)";
+		list.style.height = "calc(100% - 25px - 50px - 25px - 30px)";
 	}
 	let okay = tgui.createElement({
 			"parent": buttons,
 			"type": "button",
-			"style": {"width": "100px", "height": "25px", "margin-left": "10px"},
+			"style": {"width": "100px", "height": "100%", "margin-right": "10px"},
 			"text": "Okay",
+			"classname": "tgui-dialog-button"
 		});
 	let cancel = tgui.createElement({
 			"parent": buttons,
 			"type": "button",
-			"style": {"width": "100px", "height": "25px", "margin-left": "10px"},
+			"style": {"width": "100px", "height": "100%", "margin-right": "10px"},
 			"text": "Cancel",
-		});
-	let deleteBtn = tgui.createElement({
-			"parent": buttons,
-			"type": "button",
-			"style": {"width": "100px", "height": "25px", "margin-left": "10px"},
-			"text": "Delete file",
-			"click": () => deleteFile(name.value),
-		});
-
-	let exportBtn = tgui.createElement({
-			"parent": buttons,
-			"type": "button",
-			"style": {"width": "100px", "height": "25px", "margin-left": "10px"},
-			"text": "Export",
-			"click": () => exportFile(name.value)
-		});
-	
-	let importBtn = tgui.createElement({
-			"parent": buttons,
-			"type": "button",
-			"style": {"width": "100px", "height": "25px", "margin-left": "10px"},
-			"text": "Import",
-			"click": () => importFile()
+			"classname": "tgui-dialog-button"
 		});
 	// populate options
 	for (let i=0; i<files.length; i++)
@@ -19501,8 +19521,8 @@ function fileDlg(title, filename, allowNewFilename, onOkay)
 					deleteFile(name.value);
 					return false;
 				}
-			});
-	okay.addEventListener("click", function(event)
+			})
+	let handleFileConfirmation = function(event)
 			{
 				event.preventDefault();
 				event.stopPropagation();
@@ -19516,7 +19536,9 @@ function fileDlg(title, filename, allowNewFilename, onOkay)
 					}
 				}
 				return false;
-			});
+			};
+	list.addEventListener("dblclick", handleFileConfirmation);
+	okay.addEventListener("click", handleFileConfirmation);
 	cancel.addEventListener("click", function(event)
 			{
 				tgui.stopModal();
@@ -20782,6 +20804,12 @@ span.CodeMirror-selectedtext { background: none; }
 	background: #bbb;
 }
 
+.tgui-button-text:active
+{
+	background: #bbb;
+	border-color: #222 #777 #777 #222;
+}
+
 .tgui-button-canvas
 {
 	cursor: pointer;
@@ -20797,6 +20825,54 @@ span.CodeMirror-selectedtext { background: none; }
 {
 	background: #bbb;
 }
+
+.tgui-button-canvas:active
+{
+	background: #bbb;
+	border-color: #222 #777 #777 #222;
+}
+
+
+
+.tgui-dialog-button
+{
+	cursor: pointer;
+
+	background: #eee;
+
+	border-width: 1px;
+}
+.tgui-dialog-button:focus
+{
+	background: #eee;
+	border-width: 2px;
+}
+
+.tgui-dialog-button:hover
+{
+	background: #fff;
+	border-width: 2px;
+}
+
+.tgui-dialog-button:active
+{
+	background: #bbb;
+	border-width: 2px;
+}
+
+.tgui-status-box
+{
+	background: #eee;
+	
+	font-size: 10pt;
+	
+	/*border-width: 1px;
+	border-style: solid;
+	border-color: #555 #fff #fff #555;*/
+	
+	padding: 4px
+}
+
 
 .tgui-tree
 {
